cmake_minimum_required(VERSION 3.10)
project(untitled)

set(CMAKE_CXX_STANDARD 98)

add_executable(untitled main.cpp kmp.cpp hash.cpp binary_tree.cpp dijkstra.cpp dijkstra_heap.cpp kmp_2.cpp quick_sort.cpp merge_sort.cpp use_template.cpp treap.cpp heap_sort.cpp test_args.cpp remove_k_digits.cpp merge_k.cpp my.cpp main2.cpp avltree.cpp hungary.cpp)